--- a/pages/link/link.css
+++ b/pages/link/link.css
@@ -1,16 +1,16 @@
-.link{
-    text-decoration: none;
-    opacity: 1;
-    transition: all 0.3s ease;
+.link {
+  text-decoration: none;
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.link:hover{
-    opacity: 0.5;
-    color: green;
-    text-decoration: underline;
+.link:active {
+  opacity: 0.5;
+  color: rgba(201, 203, 206, 0.658);
+  text-decoration: underline;
 }
 
-.link::after{
-    color: grey;
-    box-shadow: 0 0 15px rgb(247, 12, 12);
+.link::after {
+  color: grey;
+  box-shadow: 0 0 15px rgb(247, 12, 12);
 }
