--- a/pages/conteiner/conteiner.css
+++ b/pages/conteiner/conteiner.css
@@ -6,16 +6,23 @@
   object-fit: cover;
   max-width: 583px;
   text-decoration: none;
-  opacity: 1;
+  opacity: 0.8;
   transition: all 0.3s ease;
 }
 
-.conteiner__video-item:hover {
-  opacity: 0.5;
-  text-decoration: none;
+.video__item::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0; 
+    position: absolute;
+    z-index: 1;
+    opacity:0;
+    background-color: rgba(0,0,0,.4);
+    border-radius: 2%;
 }
-
-.conteiner__video-observatory:hover {
-  opacity: 0.5;
-  text-decoration: none;
+.video__item:hover::after{
+    transition-delay: .3s linear;
+    opacity:1;
 }
