--- a/pages/page.css
+++ b/pages/page.css
@@ -12,6 +12,11 @@
 @import url("../blocks/video/video.css");
 @import url("conteiner/conteiner.css");
 @import url("../blocks/additional/additional.css");
+@import url("../blocks/comments/comments.css");
+@import url("../blocks/cover/cover.css");
+@import url("../blocks/emblem/emblem.css");
+@import url("../blocks/barentsburg/barentsburg.css");
+@import url("../blocks/footer/footer.css");
 
 .page {
   display: flex;
