--- a/blocks/intro/__content-row/intro__content-row.css
+++ b/blocks/intro/__content-row/intro__content-row.css
@@ -1,9 +1,9 @@
-@import url("_text/intro__content-row_text.css");
-@import url("_text_autor/intro__content-row_text_autor.css");
+@import url("__autor/intro__autor.css");
+
 
 
 .intro__content-row{
-    width: 100%;
+  max-width: 984px;
     display: flex;
     
 }
