--- a/blocks/intro/__list/intro__list_text.css
+++ b/blocks/intro/__list/intro__list_text.css
@@ -1,6 +1,5 @@
-.intro__list_text{
-    list-style-type: none;
-    
+@import url("_text-span/list_text-span.css");
+
+.intro__list_text {
+  list-style-type: none;
 }
-
-
