--- a/blocks/intro/__content-row/__contenr-row_autor/__content-row_text_autor/intro__content-row_text_autor.css
+++ b/blocks/intro/__content-row/__contenr-row_autor/__content-row_text_autor/intro__content-row_text_autor.css
@@ -1,11 +1,11 @@
 @import url("__span-accent/content-row__span-accent.css");
 
-.intro__content-row_text_autor{
-    font-family: Inter;
-font-style: normal;
-font-weight: bold;
-font-size: 10px;
-line-height: 16px;
+.intro__content-row_text_autor {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 16px;
 
-color: #FFFFFF;
+  color: #ffffff;
 }
