--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,8 +1,9 @@
-.header__lang {
-  display: flex;
+a {
+  text-decoration: none;
 }
 
-.header__lang_en {
+.header__lang {
+  display: flex;
   width: 30px;
   height: 23px;
   color: white;
@@ -14,18 +15,13 @@
   text-align: right;
   margin-top: 17px;
   margin-right: 18px;
+  text-decoration: none;
 }
 
-.header__lang_ru {
-  width: 30px;
-  height: 23px;
-  color: white;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 23px;
-  text-align: right;
-  margin-top: 17px;
+.header__lang_not-active {
+  text-decoration: none;
+}
+.header__lang_active {
   text-decoration: underline;
 }
+
