--- a/pages/text/text.css
+++ b/pages/text/text.css
@@ -1,7 +1,6 @@
-.text{
-    display: flex;
-    font-family: Inter;
-font-style: normal;
-font-weight: normal;
-color: #FFFFFF;
+.text {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  color: #ffffff;
 }
