--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
+@import url("__list/footer__list.css");
 @import url("__copyright/text__copyright.css");
-@import url("__link/footer__link.css");
 
 .footer {
   max-width: 1184px;
