--- a/blocks/video/__conteiner/__video-item/conteiner__video-item.css
+++ b/blocks/video/__conteiner/__video-item/conteiner__video-item.css
@@ -5,6 +5,5 @@
 @import url("__rect/item__rect.css");
 
 .conteiner__video-item {
-  background-image: url(/foto/kamchatka.jpg);
+  background-image: url(../../../../foto/kamchatka.jpg);
 }
-
