--- a/blocks/video/__conteiner/__video-item/conteiner__video-observatory.css
+++ b/blocks/video/__conteiner/__video-item/conteiner__video-observatory.css
@@ -5,5 +5,5 @@
 @import url("__rect/item__rect.css");
 
 .conteiner__video-observatory {
-  background-image: url(/foto/observatory.jpg);
+  background-image: url(../../../../foto/observatory.jpg);
 }
