--- a/blocks/additional/__conteiner/__item/__item-cher/additional__item-cher.css
+++ b/blocks/additional/__conteiner/__item/__item-cher/additional__item-cher.css
@@ -1,3 +1,3 @@
 .additional__item-cher {
-  background-image: url(/foto/cherepovets.jpg);
+  background-image: url(../../../../../foto/cherepovets.jpg);
 }
