--- a/blocks/additional/__conteiner/__item/item-arak/additional__item-arak.css
+++ b/blocks/additional/__conteiner/__item/item-arak/additional__item-arak.css
@@ -1,3 +1,3 @@
-.additional__item-arak{
-    background-image: url(/foto/shickan.jpg);
+.additional__item-arak {
+  background-image: url(../../../../../foto/shickan.jpg);
 }
