--- a/blocks/comments/__container/comments__container.css
+++ b/blocks/comments/__container/comments__container.css
@@ -2,6 +2,7 @@
 
 .comments__container {
   max-width: 1184px;
+  margin-top: 72px;
   display: grid;
   grid-gap: 19px;
   grid-template-columns: repeat(auto-fit, minmax(382px, 1fr));
