--- a/blocks/video/__conteiner/__video-item/conteiner__video-item.css
+++ b/blocks/video/__conteiner/__video-item/conteiner__video-item.css
@@ -4,6 +4,35 @@
 @import url("__subtitle/item__subtitle.css");
 @import url("__rect/item__rect.css");
 
-.conteiner__video-item {
-  background-image: url(../../../../foto/kamchatka.jpg);
+.video__item-link {
+  background-image: url(../../../../foto/kamchatka.jpg);  
+    max-width: 583px;
+    display: block;
+    text-decoration: none;
+    z-index: 1;
+    background-size: cover;
+  position: relative;
+  overflow: hidden;
+  padding-left: 30px;
+  padding-top: 30px;
+  padding-bottom: 28px;
+  border-radius: 5px;
+}
+
+.video__item-link::before {
+  content: '';
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.video__item-link:hover::before {
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: .1s linear;
+  z-index: -2;
 }
