--- a/blocks/video/__conteiner/__video-item/conteiner__video-item.css
+++ b/blocks/video/__conteiner/__video-item/conteiner__video-item.css
@@ -6,4 +6,30 @@
 
 .conteiner__video-item {
   background-image: url(../../../../foto/kamchatka.jpg);
+  border-radius: 5px;
+  max-width: 583px;
+  display: block;
+  text-decoration: none;
+  z-index: 1;
+  position: relative;
+  overflow: hidden;
+  opacity: 0;
+}
+
+.conteiner__video-item::before {
+  content: "";
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.conteiner__video-item:hover::before {
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.1s linear;
+  z-index: 2;
 }
