--- a/blocks/additional/__conteiner/__item/additional__item-nvr.css
+++ b/blocks/additional/__conteiner/__item/additional__item-nvr.css
@@ -1,4 +1,5 @@
 .additional__item-nvr {
   background-image: url(../../../../foto/nvrssk.jpg);
-  
-}
+  box-shadow:0 0 0 165px rgba(0, 0, 0, 0.5) inset;
+  }
+
