--- a/blocks/additional/__conteiner/__item/item-arak/additional__item-arak.css
+++ b/blocks/additional/__conteiner/__item/item-arak/additional__item-arak.css
@@ -1,3 +1,4 @@
 .additional__item-arak {
   background-image: url(../../../../../foto/shickan.jpg);
+  box-shadow: 0 0 0 165px rgba(0, 0, 0, 0.5) inset;
 }
