--- a/blocks/additional/__conteiner/__item/item-nikola/additional__item-nikola.css
+++ b/blocks/additional/__conteiner/__item/item-nikola/additional__item-nikola.css
@@ -1,3 +1,4 @@
 .additional__item-nikola {
   background-image: url(../../../../../foto/nikola.jpg);
+  box-shadow: 0 0 0 165px rgba(0, 0, 0, 0.5) inset;
 }
