intro переделал по БЭМ

--- a/blocks/intro/__content-row/__contenr-row_autor/__content-row_text_autor/intro__text-autor.css
+++ b/blocks/intro/__content-row/__contenr-row_autor/__content-row_text_autor/intro__text-autor.css
@@ -1,6 +1,6 @@
 @import url("__span-accent/content-row__span-accent.css");
 
-.intro__content-row_text_autor {
+.intro__text-autor {
   font-family: Inter;
   font-style: normal;
   font-weight: bold;
