--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,6 +3,7 @@
 @import url("__content-row/intro__content-row.css");
 @import url("__list/intro__list.css");
 @import url("__list/intro__list_text.css");
+@import url("__text/intro__text.css");
 
 .intro {
   display: flex;
