--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,7 +2,7 @@
 @import url("__subtitle/intro__subtitle.css");
 @import url("__content-row/intro__content-row.css");
 @import url("__list/intro__list.css");
-@import url("__list/intro__list_text.css");
+@import url("__list/intro__list-text.css");
 @import url("__text/intro__text.css");
 
 .intro {
