--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,5 +1,5 @@
-@import url('__title/place__title.css');
-@import url("__website/place__website.css");
+@import url('__title/places__title.css');
+@import url("__website/places__place_website.css");
 @import url("__image/place__image.css");
 @import url("paragraph/paragraph.css");
 
