--- a/blocks/block/__title/block__title.css
+++ b/blocks/block/__title/block__title.css
@@ -1,8 +1,8 @@
-.item__title {
+.block__title {
   margin: 0;
   max-width: 322px;
   font-size: 36px;
   line-height: 39px;
   margin-top: 12px;
-  z-index: 5;
+  z-index: 3;
 }
