--- a/pages/page.css
+++ b/pages/page.css
@@ -2,7 +2,7 @@
 @import url("../blocks/header/header.css");
 @import url("../blocks/lead/lead.css");
 @import url("link/link.css");
-@import url("title/title.css");
+@import url("../blocks/title/title.css");
 @import url("subtitle/subtitle.css");
 @import url("text/text.css");
 @import url("../blocks/intro/intro.css");
@@ -11,6 +11,7 @@
 @import url("../blocks/places/places.css");
 @import url("../blocks/video/video.css");
 @import url("conteiner/conteiner.css");
+@import url("../blocks/block/block.css");
 @import url("../blocks/additional/additional.css");
 @import url("../blocks/comments/comments.css");
 @import url("../blocks/cover/cover.css");
