--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -1,5 +1,5 @@
-@import url("__content-title/comments__content-title.css");
-@import url("__content-subtitle/comments__content-subtitle.css");
+@import url("__title/comments__title.css");
+@import url("__subtitle/comments__subtitle.css");
 @import url("__container/comments__container.css");
 
 .comments {
