--- a/pages/page.css
+++ b/pages/page.css
@@ -10,7 +10,6 @@
 @import url("../blocks/photo-grid/photo.css");
 @import url("../blocks/places/places.css");
 @import url("../blocks/video/video.css");
-@import url("conteiner/conteiner.css");
 @import url("../blocks/block/block.css");
 @import url("../blocks/additional/additional.css");
 @import url("../blocks/comments/comments.css");
@@ -18,6 +17,7 @@
 @import url("../blocks/emblem/emblem.css");
 @import url("../blocks/barentsburg/barentsburg.css");
 @import url("../blocks/footer/footer.css");
+@import url("../blocks/container/container.css");
 
 body{
   background-color: #2a2c2f;
