--- a/pages/page.css
+++ b/pages/page.css
@@ -1,10 +1,10 @@
 @import url("../vendor/normalize.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/lead/lead.css");
-@import url("link/link.css");
+@import url("../blocks/link/link.css");
 @import url("../blocks/title/title.css");
-@import url("subtitle/subtitle.css");
-@import url("text/text.css");
+@import url("../blocks/subtitle/subtitle.css");
+@import url("../blocks/text/text.css");
 @import url("../blocks/intro/intro.css");
 @import url("../vendor/font/font.css");
 @import url("../blocks/photo-grid/photo.css");
@@ -18,6 +18,7 @@
 @import url("../blocks/barentsburg/barentsburg.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/container/container.css");
+@import url("../blocks/description/description.css");
 
 body{
   background-color: #2a2c2f;
