--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 @import url("__logo/header__logo.css");
 @import url("__lang/header__lang.css");
-
+@import url("__langs/header__langs.css");
 .header {
   width: 82%;
   margin-top: 30px;
