--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -8,8 +8,8 @@
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
-  font-size: 24px;
-  line-height: 23px;
+  font-size: 1.5rem;
+  line-height: 1;
   text-align: right;
   margin: 17px 18px 0 0;
   text-decoration: none;
