--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,4 +8,44 @@
   margin-right: auto;
   display: flex;
   justify-content: space-between;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 320px) {
+  .header{
+    width: calc(100% - 32px);
+    margin-top: 16px;
+  }
+  
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .header{
+    width: calc(100% - 32px);
+    margin-top: 16px;
+  }
+  
+}
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .header{
+    width: calc(100% - 48px);
+    margin-top: 30px;
+  }
+  
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .header{
+    width: calc(100% - 96px);
+    margin-top: 30px;
+  }
+  
+}
+
+@media screen and (min-width: 1025px) {
+  .header{
+    width: calc(100% - 96px);
+    margin-top: 30px;
+  }
+  
 }
