--- a/pages/page.css
+++ b/pages/page.css
@@ -25,7 +25,7 @@ body{
 }
 
 .page {
-  display: flex;
+    display: flex;
   flex-direction: column;
   align-content: center;
   padding: 0;
@@ -33,4 +33,9 @@ body{
   margin-left: auto;
   max-width: 1440px;
   min-width: 320px;
+  box-sizing: border-box;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+-ms-text-size-adjust: 100%;
+-moz-text-size-adjust: 100%;
 }
