--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,6 +3,6 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 11px;
-  width: 984px;
-  height: 554px;
+  width: 100%;
+  height: auto;
 }
