--- a/blocks/block/__title/block__title.css
+++ b/blocks/block/__title/block__title.css
@@ -1,8 +1,8 @@
 .block__title {
   margin: 0;
   max-width: 322px;
-  font-size: 36px;
-  line-height: 39px;
+  font-size: 2.25rem;
+  line-height: 1.1;
   margin-top: 12px;
   z-index: 3;
 }
