--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -15,3 +15,55 @@ p {
   text-transform: uppercase;
   color: #ffffff;
 }
+
+@media screen and (max-width: 320px) {
+  .lead__caption {
+    width: calc(100% - 32px);
+    font-size: 0.6rem;
+    line-height: 1.1;
+    margin-left: 16px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .lead__caption {
+    width: calc(100% - 32px);
+    font-size: 0.6rem;
+    line-height: 1.1;
+    margin-left: 16px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  .lead__caption {
+    width: calc(100% - 32px);
+    font-size: 0.6rem;
+    line-height: 1.1;
+    margin-left: 16px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .lead__caption {
+    width: calc(100% - 48px);
+    font-size: 0.6rem;
+    line-height: 1.1;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .lead__caption {
+    width: 100%;
+    font-size: 0.6rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .lead__caption {
+    width: calc(100% - 202px);
+    font-size: 0.6rem;
+    line-height: 1.1;
+  }
+}
