--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,58 @@
 .lead__subtitle {
   max-width: 583px;
-  width: 59%;
-  font-size: 30px;
-  line-height: 36px;
+  font-size: 2;
+  line-height: 1;
+
   margin-top: 36px;
   margin-left: auto;
   margin-right: auto;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    width: calc(100% - 32px);
+    font-size: 1rem;
+    line-height: 1.4;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .lead__subtitle {
+    width: calc(100% - 32px);
+    font-size: 1rem;
+    line-height: 1.4;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  .lead__subtitle {
+    width: calc(100% - 32px);
+    font-size: 1rem;
+    line-height: 1.4;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .lead__subtitle {
+    width: calc(100% - 48px);
+    font-size: 2rem;
+    line-height: 1.2;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .lead__subtitle {
+    width: 100%;
+    font-size: 2rem;
+    line-height: 1.2;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .lead__subtitle {
+    width: calc(100% - 202px);
+    font-size: 2rem;
+    line-height: 1.2;
+  }
 }
