--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,52 @@
 .lead__title {
-  font-size: 96px;
-  line-height: 93px;
+  font-size: 6rem;
+  line-height: 0.97;
   text-align: center;
   max-width: 782px;
-  width: 79%;
   margin: 0 auto;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    width: calc(100% - 32px);
+    font-size: 2.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .lead__title {
+    width: calc(100% - 32px);
+    font-size: 2.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  .lead__title {
+    width: calc(100% - 32px);
+    font-size: 2.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .lead__title {
+    width: calc(100% - 48px);
+    font-size: 6rem;
+    line-height: 1;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .lead__title {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .lead__title {
+    width: calc(100% - 202px);
+  }
 }
