--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -10,6 +10,46 @@
   flex-direction: column;
   align-content: center;
   margin-left: auto;
-  margin-top: 57px;
+  margin-top: 48px;
   margin-right: auto;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .lead {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .lead {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .lead {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .lead {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .lead {
+    width: calc(100% - 294px);
+  }
 }
