--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,55 @@
 .intro__title {
   max-width: 683px;
-  font-size: 54px;
-  line-height: 59px;
+  font-size: 3.38rem;
+  line-height: 1.1;
   margin: 0 auto 0 0;
 }
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    width: 100%;
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .intro__title {
+    width: 100%;
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  .intro__title {
+    width: 100%;
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .intro__title {
+    width: 100%;
+    font-size: 3.4rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .intro__title {
+    font-size: 3.4rem;
+    line-height: 1.1;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .intro__title {
+    font-size: 3.4rem;
+    line-height: 1.1;
+    width: 100%;
+  }
+}
+
