--- a/blocks/photo-grid/photo.css
+++ b/blocks/photo-grid/photo.css
@@ -2,8 +2,9 @@
 
 .photo {
   display: grid;
-  max-width: 1184px;
+  width: calc(100%-256px);
   width: 82%;
+  object-fit: cover;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 16px;
@@ -13,3 +14,41 @@
   margin-right: auto;
   margin-bottom: 20px;
 }
+
+
+
+@media screen and (max-width: 320px) {
+  .photo {
+    width: calc(100% - 32px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .photo {
+    width: calc(100% - 32px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .photo {
+    width: calc(100% - 32px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .photo {
+    width: calc(100% - 48px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .photo {
+    width: calc(100% - 96px);
+  }
+}
+
+
