--- a/blocks/places/__place/__image/place__image.css
+++ b/blocks/places/__place/__image/place__image.css
@@ -1,6 +1,6 @@
 .place__image {
-    max-width: 460px;
-    max-height: 460px;
+    max-width: 100%;
+    max-height: auto;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     
