--- a/blocks/places/__place/__title/places__title.css
+++ b/blocks/places/__place/__title/places__title.css
@@ -1,6 +1,6 @@
 .places__title {
-  font-size: 72px;
-  line-height: 65px;
+  font-size: 4.5rem;
+  line-height: 0.9;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
   max-width: 457px;
