--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,3 +7,44 @@
   margin-right: auto;
   
 }
+
+
+@media screen and (max-width: 320px) {
+  .places {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .places {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .places {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .places {
+    width: calc(100% - 48px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .places {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .places {
+    width: calc(100% - 296px);
+  }
+}
