Адаптация блока video

--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,17 +1,13 @@
-@import url('__title/places__title.css');
+@import url("__title/places__title.css");
 @import url("__website/places__place-website.css");
 @import url("__image/place__image.css");
 @import url("paragraph/paragraph.css");
 
-
-
-
 .places__place {
-    max-width: 984px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));  
-    
-    grid-column-gap: 40px;
-    grid-row-gap: 60px;
-    margin-top: 83px;
-  }
+  max-width: 984px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-column-gap: 40px;
+  grid-row-gap: 60px;
+  margin-top: 83px;
+}
