--- a/blocks/block/__item/_bg/block__item_bg_kamchatka.css
+++ b/blocks/block/__item/_bg/block__item_bg_kamchatka.css
@@ -2,19 +2,15 @@
 .block__item_bg_kamchatka {
   display: flex;
 flex-direction: column;
-width: 100%;
-height: 323px;
 object-fit: cover;
-max-width: 583px;
-text-decoration: none;
 transition: all 0.3s ease;
   position: relative;
   padding: 30px;
     box-sizing: border-box;
     width: 100%;
     justify-content: space-between;
-  max-width: 583px;
-  height: 323px;
+  
+  height: auto;
   border-radius: 5px;
   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../../foto/kamchatka.jpg);
   background-position: top;
