--- a/blocks/places/__place/__image/place__image.css
+++ b/blocks/places/__place/__image/place__image.css
@@ -1,8 +1,45 @@
 .place__image {
-    max-width: 100%;
-    max-height: auto;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    
+  max-width: 100%;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+@media screen and (max-width: 320px) {
+  .place__image {
+    width: 100%;
+    height: auto;
   }
-  
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .place__image {
+    max-width: 375px;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .place__image {
+    max-width: 375px;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .place__image {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .place__image {
+    max-width: 440px;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .place__image {
+    max-width: 460px;
+  }
+}
