--- a/blocks/places/__place/__title/places__title.css
+++ b/blocks/places/__place/__title/places__title.css
@@ -7,3 +7,45 @@
   margin: 0;
   align-self: flex-end;
 }
+
+@media screen and (max-width: 320px) {
+  .places__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .places__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .places__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .places__title {
+    font-size: 2.6rem;
+    line-height: 1;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .places__title {
+    font-size: 4.5rem;
+    line-height: 0.9;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .places__title {
+    font-size: 4.5rem;
+    line-height: 0.9;
+  }
+}
