--- a/blocks/places/__place/__website/places__place-website.css
+++ b/blocks/places/__place/__website/places__place-website.css
@@ -9,3 +9,21 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 320px) {
+  .places__place-website {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .places__place-website {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 600px) {
+  .places__place-website {
+    display: none;
+  }
+}
