--- a/blocks/places/__place/paragraph/__paragraph-region/place__paragraph-region.css
+++ b/blocks/places/__place/paragraph/__paragraph-region/place__paragraph-region.css
@@ -1,12 +1,13 @@
 .place__paragraph-region {
-    font-size: 18px;
-    line-height: 30px;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    margin-top: 36px;
-  }
-  
+  font-size: 1.1rem;
+  line-height: 1.5;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  margin: 36px auto 0 auto;
+  overflow: hidden;
+  object-fit: cover;
+}
 
-  .place__paragraph-region:first-child{
-    margin-top: 0;
+.place__paragraph-region:first-child {
+  margin-top: 0;
 }
