--- a/blocks/places/__place/paragraph/paragraph.css
+++ b/blocks/places/__place/paragraph/paragraph.css
@@ -1,4 +1,49 @@
 @import url("__paragraph-spit/place__paragraph-spit.css");
-@import url('__paragraph-region/place__paragraph-region.css');
+@import url("__paragraph-region/place__paragraph-region.css");
 
+.paragraph {
+  overflow: hidden;
+  max-width: 484px;
+  display: flex;
+  flex-direction: column;
+}
 
+@media screen and (max-width: 320px) {
+  .paragraph {
+    max-width: 288px;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .paragraph {
+    max-width: 343px;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .paragraph {
+    max-width: 343px;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .paragraph {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .paragraph {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .paragraph {
+    width: 100%;
+  }
+}
