--- a/blocks/video/__block/video__block.css
+++ b/blocks/video/__block/video__block.css
@@ -1,7 +1,9 @@
 
-/*.video__block  {
+.video__block  {
+  width: 100%;
+}
   
-  display: grid;
+  /*display: grid;
   grid-gap: 18px;
   grid-template-columns: repeat(auto-fit, minmax(583px, 1fr));
   grid-template-rows: 1fr;
