--- a/blocks/video/__subtitle/video__subtitle.css
+++ b/blocks/video/__subtitle/video__subtitle.css
@@ -1,10 +1,35 @@
 .video__subtitle{
-    margin-top: 32px;
+    margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 61px;
     max-width: 640px;
-    font-size: 24px;
-line-height: 35px;
+    font-size: 1.5rem;
+    line-height: 1.4;
 text-align: center;
 }
+
+
+@media screen and (max-width: 320px) {
+    .video__subtitle {
+      font-size: 1rem;
+    line-height: 1.4;
+    }
+  }
+  
+  @media screen and (min-width: 321px) and (max-width: 375px) {
+    .video__subtitle {
+      font-size: 1rem;
+    line-height: 1.4;
+    }
+  }
+  
+  @media screen and (min-width: 376px) and (max-width: 424px) {
+    .video__subtitle {
+      font-size: 1rem;
+    line-height: 1.4;
+    }
+  }
+  
+  
+  
