--- a/blocks/video/__title/video__title.css
+++ b/blocks/video/__title/video__title.css
@@ -1,7 +1,38 @@
 .video__title {
  max-width: 800px;
+ min-width: 288px;
   margin: 0 auto; 
-  font-size: 72px;
-  line-height: 78px;
+  font-size: 4.5rem;
+  line-height: 1.1;
   text-align: center;
 }
+
+
+@media screen and (max-width: 320px) {
+  .video__title {
+    font-size: 2rem;
+  line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .video__title {
+    font-size: 2rem;
+  line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .video__title {
+    font-size: 2rem;
+  line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .video__title {
+    font-size: 2.6rem;
+  line-height: 1.1;
+  }
+}
+
