--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -3,10 +3,53 @@
 @import url("__block/video__blok.css");
 
 .video {
-  max-width: 1184px;
+  width: calc(100% - 256px);
   display: flex;
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 71px;
+  margin-top: 102px;
+}
+
+
+@media screen and (max-width: 320px) {
+  .video {
+    width: calc(100% - 32px);
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .video {
+    width: calc(100% - 32px);
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .video {
+    width: calc(100% - 32px);
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .video {
+    width: calc(100% - 48px);
+    
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .video {
+    width: calc(100% - 96px);
+    
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .video {
+    width: calc(100% - 96px);
+    
+  }
 }
