--- a/blocks/block/__title/block__title.css
+++ b/blocks/block/__title/block__title.css
@@ -6,3 +6,45 @@
   margin-top: 12px;
   z-index: 3;
 }
+
+@media screen and (max-width: 320px) {
+  .block__title {
+    font-size: 1.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block__title {
+    font-size: 1.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block__title {
+    font-size: 1.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .block__title {
+    font-size: 1.5rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .block__title {
+    font-size: 2.25rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .block__title {
+    font-size: 2.25rem;
+    line-height: 1.1;
+  }
+}
