--- a/blocks/block/__duration/block__duration.css
+++ b/blocks/block/__duration/block__duration.css
@@ -2,9 +2,49 @@
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 13px;
+  font-size: 0.75;
+  line-height: 1;
   letter-spacing: 0.3em;
   color: #ffffff;
   margin-top: 94px;
 }
+
+/*
+@media screen and (max-width: 320px) {
+  .block__duration {
+    margin-top: 49PX;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block__duration {
+  margin-top: 41px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block__duration {
+    margin-top: 41px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .block__duration {
+  
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .block__duration {
+    font-size: 2.25rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .block__duration {
+    font-size: 2.25rem;
+    line-height: 1.1;
+  }
+}
+*/
