--- a/blocks/block/__item/_bg/block__item_bg_kamchatka.css
+++ b/blocks/block/__item/_bg/block__item_bg_kamchatka.css
@@ -1,29 +1,53 @@
-
 .block__item_bg_kamchatka {
   display: flex;
-flex-direction: column;
-object-fit: cover;
-transition: all 0.3s ease;
+  flex-direction: column;
+  object-fit: cover;
+  transition: all 0.3s ease;
   position: relative;
   padding: 30px;
-    box-sizing: border-box;
-    width: 100%;
-    justify-content: space-between;
-  
+  box-sizing: border-box;
+  width: 100%;
+  justify-content: space-between;
   height: auto;
   border-radius: 5px;
-  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../../../../foto/kamchatka.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../../../../foto/kamchatka.jpg);
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   text-decoration: none;
-    
 }
 
 .block__item_bg_kamchatka:hover {
-  background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../../../../foto/kamchatka.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(../../../../foto/kamchatka.jpg);
 }
- /* background-image: url(../../../../foto/kamchatka.jpg);
+
+@media screen and (max-width: 320px) {
+  .block__item_bg_kamchatka {
+    padding: 16px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block__item_bg_kamchatka {
+    padding: 16px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block__item_bg_kamchatka {
+    padding: 16px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .block__item_bg_kamchatka {
+    padding: 24px;
+  }
+}
+
+/* background-image: url(../../../../foto/kamchatka.jpg);
   border-radius: 5px;
   max-width: 583px;
   display: block;
