--- a/blocks/block/__item/block__item.css
+++ b/blocks/block/__item/block__item.css
@@ -1,11 +1,51 @@
 @import url("_bg/block__item_bg_kamchatka.css");
 @import url("_bg/block__item_bg_observatory.css");
 
+.block__item {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
-.block__item{  
-padding-top: 30px;
-padding-bottom: 30px;
+@media screen and (max-width: 320px) {
+  .block__item {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
 
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block__item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block__item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .block__item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .block__item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .block__item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 /**/
