--- a/blocks/block/block.css
+++ b/blocks/block/block.css
@@ -5,11 +5,28 @@
 @import url("__title/block__title.css");
 @import url("__subtitle/block__subtitle.css");
 
+.block {
+  max-width: 1184px;
+  display: grid;
+  grid-gap: 18px;
+  grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+  grid-template-rows: 1fr;
+}
 
-.block{
-    max-width: 1184px;
-    display: grid;
-    grid-gap: 18px;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-    grid-template-rows: 1fr;
+@media screen and (max-width: 320px) {
+  .block {
+    grid-gap: 8px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block {
+    grid-gap: 8px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block {
+    grid-gap: 8px;
+  }
 }
