--- a/blocks/container/__author/container__author.css
+++ b/blocks/container/__author/container__author.css
@@ -3,8 +3,8 @@
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 0.875rem;
+  line-height: 1.4;
 
   color: #ffffff;
 }
