--- a/blocks/comments/__title/comments__title.css
+++ b/blocks/comments/__title/comments__title.css
@@ -1,7 +1,35 @@
 .comments__title {
   max-width: 800px;
-  font-size: 72px;
-  line-height: 65px;
+  font-size: 4.5rem;
+  line-height: 0.9;
   text-align: center;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 320px) {
+  .comments__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .comments__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .comments__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .comments__title {
+    font-size: 2.625rem;
+    line-height: 1.1;
+  }
 }
