--- a/blocks/container/__image/container__image.css
+++ b/blocks/container/__image/container__image.css
@@ -1,6 +1,6 @@
 .container__image{
-    width: 97px;
-    height: 97px;
+   max-width: 97px;
+    height: auto;
     background: #C4C4C4;
     border-radius: 50px;
 }
