--- a/blocks/container/__quote-text/container__quote-text.css
+++ b/blocks/container/__quote-text/container__quote-text.css
@@ -1,5 +1,37 @@
-.container__quote-text{
-margin-top: 39px;
-font-size: 14px;
-line-height: 24px;  
+.container__quote-text {
+  margin-top: 42px;
+  font-size: 0.875rem;
+  line-height: 1.7;
+}
+
+@media screen and (max-width: 320px) {
+  .container__quote-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    margin-top: 24px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .container__quote-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    margin-top: 24px;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .container__quote-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    margin-top: 24px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .container__quote-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    margin-top: 24px;
+  }
 }
