--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,9 +1,30 @@
 .cover__subtitle {
   max-width: 382px;
   margin: 103px auto 0 auto;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 1.125rem;
+  line-height: 1.44;
   text-align: center;
   z-index: 1;
   position: relative;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    font-size: 0.875rem;
+    line-height: 1.44;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .cover__subtitle {
+    font-size: 0.875rem;
+    line-height: 1.44;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .cover__subtitle {
+    font-size: 0.875rem;
+    line-height: 1.44;
+  }
 }
