--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,10 +1,32 @@
 .cover__title {
   max-width: 1094px;
   line-height: 78px;
-  font-size: 72px;
+  font-size: 4.5rem;
   text-align: center;
   margin: 255px auto 0 auto;
   justify-content: center;
   z-index: 1;
   position: relative;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    font-size: 2rem;
+    line-height: 1.1;
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .cover__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .cover__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
 }
