--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,8 +6,8 @@
   flex-direction: column;
   justify-content: center;
   margin: 91px auto 0 auto;
-  width: 1184px;
-  height: 594px;
+  width: calc(100% - 256px);
+  height: auto;
   background-image: url(../../foto/cover.jpg);
   position: relative;
   z-index: 0;
@@ -29,4 +29,40 @@
 
 .cover:hover::before {
   opacity: 0.8;
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .cover {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .cover {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .cover {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .cover {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .cover {
+    width: calc(100% - 96px);
+  }
 }
