--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -4,3 +4,40 @@
   display: flex;
   padding: 0;
 }
+
+
+@media screen and (max-width: 320px) {
+  .footer__list {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .footer__list {
+  flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 500px) {
+  .footer__list {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 768px) {
+  .footer__list {
+    width: calc(100% - 46px);
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .footer__list {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .footer__list {
+    width: calc(100% - 96px);
+  }
+}
