--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -33,7 +33,15 @@
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 700px) {
+  .lead__subtitle {
+    width: calc(100% - 32px);
+    font-size: 1.5rem;
+    line-height: 1.4;
+  }
+}
+
+@media screen and (min-width: 701px) and (max-width: 768px) {
   .lead__subtitle {
     width: calc(100% - 48px);
     font-size: 2rem;
