--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -31,7 +31,14 @@
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 700px) {
+  .lead__title {
+    width: calc(100% - 40px);
+    font-size: 3.5rem;
+    line-height: 1.1;
+  }
+}
+@media screen and (min-width: 701px) and (max-width: 768px) {
   .lead__title {
     width: calc(100% - 48px);
     font-size: 6rem;
