--- a/blocks/container/__image/container__image.css
+++ b/blocks/container/__image/container__image.css
@@ -4,3 +4,29 @@
     background: #C4C4C4;
     border-radius: 50px;
 }
+
+@media screen and (max-width: 320px) {
+    .container__image {
+      margin: 0 auto;
+    }
+  }
+  
+  @media screen and (min-width: 321px) and (max-width: 375px) {
+    .container__image {
+        margin: 0 auto;
+    }
+  }
+  
+  @media screen and (min-width: 376px) and (max-width: 424px) {
+    .container__image {
+        margin: 0 auto;
+    }
+  }
+  
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .container__image {
+        margin: 0 auto;
+    }
+  }
+  
+ 
