--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -8,6 +8,12 @@
   margin-top: 30px;
   display: grid;
   grid-gap: 19px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(3, minmax(296px, 1fr));
   grid-template-rows: 1fr;
+}
+
+@media screen and (max-width: 1023px) {
+  .container {
+    grid-template-columns: repeat(1, minmax(320px, 1fr));
+  }
 }
