--- a/blocks/photo-grid/photo.css
+++ b/blocks/photo-grid/photo.css
@@ -48,7 +48,7 @@
   }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1280) {
+@media screen and (min-width: 1025px) and (max-width: 1439px) {
   .photo {
     width: calc(100% - 96px);
   }
