--- a/blocks/places/__place/__image/place__image.css
+++ b/blocks/places/__place/__image/place__image.css
@@ -13,14 +13,14 @@
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
   .place__image {
-    max-width: 375px;
+    max-width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 424px) {
   .place__image {
-    max-width: 375px;
+    max-width: 100%x;
     height: auto;
   }
 }
@@ -29,17 +29,5 @@
   .place__image {
     width: 100%;
     height: auto;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .place__image {
-    max-width: 440px;
-  }
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1280) {
-  .place__image {
-    max-width: 460px;
   }
 }
