--- a/blocks/places/__place/__title/places__title.css
+++ b/blocks/places/__place/__title/places__title.css
@@ -36,7 +36,14 @@
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 900px) {
+  .places__title {
+    font-size: 2.6rem;
+    line-height: 1;
+  }
+}
+
+@media screen and (min-width: 901px) and (max-width: 1024px) {
   .places__title {
     font-size: 4.5rem;
     line-height: 0.9;
