--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,7 +3,7 @@
   line-height: 0.97;
   text-align: center;
   max-width: 782px;
-  margin: 0 auto;
+  margin: 10px auto;
   box-sizing: border-box;
 }
 
