--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,7 +1,7 @@
 @import url("__title/places__title.css");
 @import url("__website/places__place-website.css");
-@import url("__image/place__image.css");
-@import url("paragraph/paragraph.css");
+@import url("__image/places__image.css");
+@import url("paragraph/places__paragraph.css");
 
 .places__place {
   max-width: 984px;
