--- a/blocks/places/__place/__image/places__image.css
+++ b/blocks/places/__place/__image/places__image.css
@@ -1,32 +1,32 @@
-.place__image {
+.places__image {
   max-width: 100%;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
 }
 
 @media screen and (max-width: 320px) {
-  .place__image {
+  .places__image {
     width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
-  .place__image {
+  .places__image {
     max-width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 424px) {
-  .place__image {
+  .places__image {
     max-width: 100%x;
     height: auto;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .place__image {
+  .places__image {
     width: 100%;
     height: auto;
   }
