--- a/blocks/places/__place/__website/_url/places__url.css
+++ b/blocks/places/__place/__website/_url/places__url.css
@@ -1,10 +1,10 @@
-.places__url{
-    font-family: Inter;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 30px;
-color: #FFFFFF;
-text-decoration: underline;
-margin-top: 7px;
+.places__url {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  color: #ffffff;
+  text-decoration: underline;
+  margin-top: 7px;
 }
