--- a/blocks/places/__place/paragraph/places__paragraph.css
+++ b/blocks/places/__place/paragraph/places__paragraph.css
@@ -1,7 +1,7 @@
 @import url("__paragraph-spit/place__paragraph-spit.css");
 @import url("__paragraph-region/place__paragraph-region.css");
 
-.paragraph {
+.places__paragraph {
   overflow: hidden;
   max-width: 484px;
   display: flex;
@@ -9,41 +9,41 @@
 }
 
 @media screen and (max-width: 320px) {
-  .paragraph {
+  .places__paragraph {
     max-width: 288px;
     height: auto;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
-  .paragraph {
+  .places__paragraph {
     max-width: 343px;
     height: auto;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 424px) {
-  .paragraph {
+  .places__paragraph {
     max-width: 343px;
     height: auto;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .paragraph {
+  .places__paragraph {
     width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  .paragraph {
+  .places__paragraph {
     width: 100%;
   }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1280) {
-  .paragraph {
+  .places__paragraph {
     width: 100%;
   }
 }
