--- a/blocks/footer/__list/__link/footer__link.css
+++ b/blocks/footer/__list/__link/footer__link.css
@@ -9,7 +9,7 @@ li {
   font-size: 1.5rem;
   line-height: 1.7;
   color: #ffffff;
-
+  text-decoration: none;
   align-self: center;
   margin-right: 18px;
 }
@@ -18,11 +18,10 @@ li {
   margin: 0px;
 }
 
-
 @media screen and (max-width: 320px) {
   .footer__text-copyright {
     text-align: left;
-margin-left: 0;
+    margin-left: 0;
   }
 }
 
@@ -36,7 +35,7 @@ margin-left: 0;
 @media screen and (min-width: 376px) and (max-width: 424px) {
   .footer__link {
     text-align: left;
-margin-left: 0;
+    margin-left: 0;
   }
 }
 
