--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -43,7 +43,7 @@
   }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1280) {
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
   .places {
     width: calc(100% - 296px);
   }
