--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,8 @@
 .cover__subtitle {
   max-width: 382px;
-  margin: 103px auto 0 auto;
+  margin: 171px auto 48px;
   font-size: 1.125rem;
-  line-height: 1.44;
+  line-height: 1.4;
   text-align: center;
   z-index: 1;
   position: relative;
