--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -43,3 +43,9 @@
     width: calc(100% - 96px);
   }
 }
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+  .comments {
+    width: calc(100% - 96px);
+  }
+}
