--- a/blocks/container/__quote-text/container__quote-text.css
+++ b/blocks/container/__quote-text/container__quote-text.css
@@ -9,6 +9,7 @@
     font-size: 1rem;
     line-height: 1.7;
     margin-top: 24px;
+    order: 3;
   }
 }
 
@@ -17,6 +18,7 @@
     font-size: 1rem;
     line-height: 1.7;
     margin-top: 24px;
+    order: 3;
   }
 }
 
@@ -25,6 +27,7 @@
     font-size: 1rem;
     line-height: 1.7;
     margin-top: 24px;
+    order: 3;
   }
 }
 
@@ -33,5 +36,6 @@
     font-size: 1rem;
     line-height: 1.7;
     margin-top: 24px;
+    order: 3;
   }
 }
