--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -61,7 +61,7 @@
   }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1280) {
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
   .cover {
     width: calc(100% - 96px);
   }
