--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,6 @@
   align-self: center;
 }
 
-
 @media screen and (max-width: 320px) {
   .footer {
     flex-direction: column-reverse;
@@ -21,8 +20,8 @@
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
   .footer {
-  flex-direction: column-reverse;
-  margin-left: 16px;
+    flex-direction: column-reverse;
+    margin-left: 16px;
   }
 }
 
@@ -45,7 +44,7 @@
   }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1280) {
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
   .footer {
     width: calc(100% - 96px);
   }
