--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,9 +1,5 @@
-
-
 .header__lang {
-  
   width: 30px;
-  height: 23px;
   color: white;
   font-family: Inter;
   font-style: normal;
@@ -22,3 +18,9 @@
   text-decoration: underline;
 }
 
+
+@media screen and (max-width: 375px) {
+  .header__lang {
+    font-size: 1.125rem;
+  }
+}
