--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -13,6 +13,7 @@
     width: calc(100% - 32px);
     font-size: 1rem;
     line-height: 1.4;
+    margin-top: 0;
   }
 }
 
@@ -21,6 +22,7 @@
     width: calc(100% - 32px);
     font-size: 1rem;
     line-height: 1.4;
+    margin-top: 0;
   }
 }
 
