--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -12,6 +12,8 @@
     width: calc(100% - 32px);
     font-size: 2.5rem;
     line-height: 1.1;
+    margin-bottom: 8px;
+    margin-top: 0;
   }
 }
 
@@ -20,6 +22,8 @@
     width: calc(100% - 32px);
     font-size: 2.5rem;
     line-height: 1.1;
+    margin-bottom: 8px;
+    margin-top: 0;
   }
 }
 
