--- a/blocks/photo-grid/__grid/photo__grid.css
+++ b/blocks/photo-grid/__grid/photo__grid.css
@@ -1,4 +1,28 @@
-.photo__grid{
- max-width: 284px;
-    height: auto;
+.photo__grid {
+  max-width: 284px;
+  height: auto;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .photo__grid {
+    max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .photo__grid {
+    max-width: 352px;
+  }
+}
+
+@media screen and (min-width: 375px) and (max-width: 424px) {
+  .photo__grid {
+    max-width: 343px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .photo__grid {
+    max-width: 288px;
+  }
 }
