--- a/blocks/footer/__copyright/footer__text-copyright.css
+++ b/blocks/footer/__copyright/footer__text-copyright.css
@@ -13,6 +13,7 @@
   .footer__text-copyright {
     text-align: left;
     margin-left: 0;
+    margin-top: 48px;
   }
 }
 
@@ -20,6 +21,7 @@
   .footer__text-copyright {
     text-align: left;
     margin-left: 0;
+    margin-top: 48px;
   }
 }
 
@@ -27,6 +29,7 @@
   .footer__text-copyright {
     text-align: left;
     margin-left: 0;
+    margin-top: 48px;
   }
 }
 
