--- a/blocks/photo-grid/photo.css
+++ b/blocks/photo-grid/photo.css
@@ -19,6 +19,7 @@
     width: calc(100% - 32px);
     height: auto;
     grid-row-gap: 8px;
+    margin-top: 64px;
   }
 }
 
@@ -26,6 +27,7 @@
   .photo {
     width: calc(100% - 32px);
     height: auto;
+    margin-top: 64px;
   }
 }
 
@@ -33,6 +35,7 @@
   .photo {
     width: calc(100% - 32px);
     height: auto;
+    margin-top: 64px;
   }
 }
 
