--- a/blocks/container/__image/container__image.css
+++ b/blocks/container/__image/container__image.css
@@ -5,6 +5,13 @@
   border-radius: 50px;
 }
 
+@media screen and (max-width: 1023px) {
+  .container__image {
+    margin: 0 auto;
+    order: 1;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .container__image {
     margin: 0 auto;
@@ -26,7 +33,7 @@
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .container__image {
     margin: 0 auto;
     order: 1;
