--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,6 +8,12 @@
   position: relative;
 }
 
+@media screen and (max-width: 1279px) {
+  .cover__subtitle {
+    margin-top: 84px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__subtitle {
     font-size: 0.875rem;
@@ -23,7 +29,6 @@
     line-height: 1.44;
     margin-top: 7px;
     margin-bottom: 24px;
-    
   }
 }
 
@@ -31,13 +36,6 @@
   .cover__subtitle {
     font-size: 0.875rem;
     line-height: 1.44;
-  }
-}
-
-
-@media screen and (min-width: 770px) and (max-width: 1024px) {
-  .cover__subtitle {
-    margin-top: 84px;
   }
 }
 
