--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,31 +11,31 @@
   padding: 0 69px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1279px) {
   .cover__title {
-    font-size: 2rem;
-    line-height: 1.1;
-    margin-top: 64px;
+    margin-top: 211px;
+    padding: 0 75px;
   }
 }
 
-@media screen and (min-width: 321px) and (max-width: 375px) {
+@media screen and (max-width: 1023px) {
+  .cover__title {
+    margin-top: 165px;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .cover__title {
     font-size: 2rem;
     line-height: 1.1;
     margin-top: 104px;
+    padding: 0 46px;
   }
 }
 
-@media screen and (min-width: 376px) and (max-width: 424px) {
+@media screen and (max-width: 320px) {
   .cover__title {
-    font-size: 2rem;
-    line-height: 1.1;
+    margin-top: 64px;
+    padding: 0 44px;
   }
-}
-@media screen and (min-width: 425px) and (max-width: 769px) {
-  .cover__title {
-    margin-top: 204px;
-    font-size: 3rem;
-      }
 }
