--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,6 +6,8 @@
   flex-direction: column;
   justify-content: center;
   margin: 91px auto 0 auto;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: calc(100% - 256px);
   height: auto;
   background-image: url(../../foto/cover.jpg);
@@ -29,6 +31,12 @@
 
 .cover:hover::before {
   opacity: 0.8;
+}
+
+@media screen and (max-width: 1279px) {
+  .cover {
+    width: calc(100% - 96px);
+  }
 }
 
 @media screen and (max-width: 320px) {
@@ -58,11 +66,5 @@
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .cover {
     width: 100%;
-  }
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1280px) {
-  .cover {
-    width: calc(100% - 96px);
   }
 }
