--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -9,12 +9,19 @@
   display: flex;
   flex-direction: column;
   align-content: flex-start;
-  max-width: 984px;
-  width: 68%;
+  width: calc(100% - 757px);
+
   margin-top: 80px;
-  margin-left: auto;
+  margin-left: 228px;
   margin-right: auto;
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    width: calc(100% - 48px);
+    margin-left: auto;
+  }
 }
 
 @media screen and (max-width: 320px) {
@@ -41,16 +48,10 @@
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .intro {
     width: calc(100% - 48px);
     height: auto;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .intro {
-    width: calc(100% - 96px);
   }
 }
 
