--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,6 +7,18 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1279px) {
+  .lead__title {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__title {
+    width: calc(100% - 48px);
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__title {
     width: calc(100% - 32px);
@@ -47,17 +59,5 @@
     width: calc(100% - 48px);
     font-size: 6rem;
     line-height: 1;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .lead__title {
-    width: calc(100% - 96px);
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .lead__title {
-    width: calc(100% - 202px);
   }
 }
