--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,11 +2,11 @@
 @import url("__subtitle/lead__subtitle.css");
 @import url("__image/lead__image.css");
 @import url("__caption/lead__caption.css");
+@import url("__figure/lead__figure.css");
 
 .lead {
   display: flex;
-  max-width: 985px;
-  width: calc (100% - 454);
+  width: calc(100% - 454px);
   flex-direction: column;
   align-content: center;
   margin-left: auto;
@@ -15,45 +15,21 @@
   box-sizing: border-box;
 }
 
-figure {
-  margin: 0;
-}
-
-@media screen and (max-width: 320px) {
-  .lead {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media screen and (min-width: 321px) and (max-width: 375px) {
-  .lead {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media screen and (min-width: 376px) and (max-width: 424px) {
-  .lead {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 768px) {
-  .lead {
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .lead {
-    width: calc(100% - 96px);
-  }
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1280px) {
+@media screen and (max-width: 1439px) {
   .lead {
     width: calc(100% - 294px);
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    width: calc(100% - 48px);
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead {
+    width: 100%;
   }
 }
