--- a/blocks/photo-grid/__grid/photo__grid.css
+++ b/blocks/photo-grid/__grid/photo__grid.css
@@ -1,11 +1,17 @@
 .photo__grid {
-  max-width: 284px;
+  width: 100%;
   height: auto;
+}
+
+/*@media screen and (max-width: 1279px) {
+  .photo__grid {
+    
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .photo__grid {
-    max-width: 300px;
+    
   }
 }
 
