--- a/blocks/places/__place/paragraph/__paragraph-region/places__paragraph-region.css
+++ b/blocks/places/__place/paragraph/__paragraph-region/places__paragraph-region.css
@@ -10,3 +10,11 @@
 .places__paragraph-region:first-child {
   margin-top: 0;
 }
+
+
+@media screen and (max-width: 1023px) {
+  .places__paragraph-region {
+    font-size: 1rem;
+    padding: 0 1rem;
+  }
+}
