--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,8 +1,7 @@
 @import url("__place/places__place.css");
 
 .places {
-  max-width: 984px;
-  width: 68%;
+  width: calc(100% - 456px);
   display: flex;
   flex-direction: column;
   margin-left: auto;
