--- a/blocks/text/text.css
+++ b/blocks/text/text.css
@@ -1,5 +1,5 @@
 .text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: #ffffff;
