--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -11,6 +11,12 @@
   margin-top: 29px;
 }
 
+@media screen and (max-width: 1024px) {
+  .video {
+    width: calc(100% - 48px);
+  }
+}
+
 @media screen and (max-width: 320px) {
   .video {
     width: calc(100% - 32px);
@@ -32,17 +38,11 @@
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+/*@media screen and (min-width: 425px) and (max-width: 767px) {
   .video {
     width: calc(100% - 48px);
   }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .video {
-    width: calc(100% - 96px);
-  }
-}
+}*/
 
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
   .video {
