--- a/blocks/block/block.css
+++ b/blocks/block/block.css
@@ -13,20 +13,16 @@
   grid-template-rows: 1fr;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1279px) {
   .block {
-    grid-gap: 8px;
+    grid-gap: 16px;
   }
 }
 
-@media screen and (min-width: 321px) and (max-width: 375px) {
+@media screen and (max-width: 767px) {
   .block {
     grid-gap: 8px;
-  }
-}
-
-@media screen and (min-width: 376px) and (max-width: 424px) {
-  .block {
-    grid-gap: 8px;
+    grid-template-columns: repeat(1, minmax(288px, 460px));
+    justify-content: center;
   }
 }
