--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,4 @@
-.places__title {
+.place__title {
   font-size: 4.5rem;
   line-height: 0.9;
   grid-column: 1 / 2;
@@ -9,49 +9,49 @@
 }
 
 @media screen and (max-width: 320px) {
-  .places__title {
+  .place__title {
     font-size: 2rem;
     line-height: 1.1;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
-  .places__title {
+  .place__title {
     font-size: 2rem;
     line-height: 1.1;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 424px) {
-  .places__title {
+  .place__title {
     font-size: 2rem;
     line-height: 1.1;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .places__title {
+  .place__title {
     font-size: 2.6rem;
     line-height: 1;
   }
 }
 
 @media screen and (min-width: 769px) and (max-width: 900px) {
-  .places__title {
+  .place__title {
     font-size: 2.6rem;
     line-height: 1;
   }
 }
 
 @media screen and (min-width: 901px) and (max-width: 1024px) {
-  .places__title {
+  .place__title {
     font-size: 4.5rem;
     line-height: 0.9;
   }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1280) {
-  .places__title {
+  .place__title {
     font-size: 4.5rem;
     line-height: 0.9;
   }
