--- a/blocks/place/__website/place__place-website.css
+++ b/blocks/place/__website/place__place-website.css
@@ -1,7 +1,7 @@
 @import url("_url-heading/places__url-heading.css");
 @import url("_url/places__url.css");
 
-.places__place-website {
+.place__place-website {
   max-width: max-content;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
@@ -11,19 +11,19 @@
 }
 
 @media screen and (max-width: 320px) {
-  .places__place-website {
+  .place__place-website {
     display: none;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
-  .places__place-website {
+  .place__place-website {
     display: none;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 600px) {
-  .places__place-website {
+  .place__place-website {
     display: none;
   }
 }
