--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,7 @@
 @import url("../vendor/font/font.css");
 @import url("../blocks/photo-grid/photo.css");
 @import url("../blocks/places/places.css");
+@import url("../blocks/place/place.css");
 @import url("../blocks/video/video.css");
 @import url("../blocks/block/block.css");
 @import url("../blocks/additional/additional.css");
