--- a/blocks/block/__subtitle/block__subtitle.css
+++ b/blocks/block/__subtitle/block__subtitle.css
@@ -3,3 +3,9 @@
   line-height: 15px;
   margin-top: 18px;
 }
+
+@media screen and (max-width: 1279px) {
+  .block__subtitle {
+    margin-top: 0;
+  }
+}
