--- a/blocks/comments/__subtitle/comments__subtitle.css
+++ b/blocks/comments/__subtitle/comments__subtitle.css
@@ -8,7 +8,8 @@
 @media screen and (max-width: 320px) {
   .comments__subtitle {
     font-size: 1rem;
-    line-height: 1.1;
+    line-height: 1.4;
+    margin-top: 22px;
   }
 }
 
