--- a/blocks/container/__author/container__author.css
+++ b/blocks/container/__author/container__author.css
@@ -1,6 +1,6 @@
 .container__author {
   margin-top: 13px;
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 0.875rem;
@@ -15,4 +15,3 @@
     margin-right: auto;
   }
 }
-
