--- a/blocks/footer/__list/__link/footer__link.css
+++ b/blocks/footer/__list/__link/footer__link.css
@@ -3,7 +3,7 @@ li {
 }
 
 .footer__link {
-  font-family: Inter;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 1.5rem;
@@ -19,7 +19,7 @@ li {
 }
 
 @media screen and (max-width: 320px) {
-  .footer__text-copyright {
+  .footer__link {
     text-align: left;
     margin-left: 0;
   }
