--- a/blocks/photo-grid/photo.css
+++ b/blocks/photo-grid/photo.css
@@ -14,6 +14,12 @@
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 1280px) and (max-width: 1439px) {
+  .photo {
+    width: calc(100% - 96px);
+  }
+}
+
 @media screen and (max-width: 1279px) {
   .photo {
     width: calc(100% - 96px);
@@ -23,9 +29,18 @@
 
 @media screen and (max-width: 1024px) {
   .photo {
-    width: calc(100% - 48px);
-    grid-template-columns: repeat(2, minmax(100px, 400px));
+    width: calc(100% - 96px);
+    grid-template-columns: repeat(3, minmax(100px, 400px));
     margin-top: 74px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo {
+    grid-template-columns: repeat(2, minmax(100px, 460px));
+    width: calc(100% - 48px);
+    height: auto;
+    justify-content: center;
   }
 }
 
