--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -12,6 +12,7 @@
   .place__title {
     font-size: 2rem;
     line-height: 1.1;
+    margin-left: 16px;
   }
 }
 
@@ -19,6 +20,7 @@
   .place__title {
     font-size: 2rem;
     line-height: 1.1;
+    margin-left: 16px;
   }
 }
 
